# ants

./: .clang-format  .gitignore  .gitmodules  .releaserc  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  GAME_MANUAL.md  README.md  connors_suggestions  install_dependencies.sh  launcher.py  package-lock.json  package.json  requirements.txt  setup.py  shelbys_instructions  vcpkg.json
.githooks/: pre-commit
.github/: copilot-instructions.md
.husky/: pre-commit
docs/: GAME_MANUAL.md  machine_code.md  performance_tracking.txt  world_generation.md
py_wrapper/: test.py
scripts/: build_debug_with_logs.sh  debug  run  select  (+5 more)
src/benchmark/: CMakeLists.txt  ant_bench.cpp  benchmark_example.cpp
src/core/: CMakeLists.txt
src/core/app/: arg_parse.cpp  arg_parse.hpp  clock_speed.hpp  engine.cpp  engine.hpp  engine_state.cpp  engine_state.hpp  facade.cpp  facade.hpp  game_mode.cpp  game_mode.hpp  game_state.cpp  game_state.hpp  globals.hpp
src/core/entity/: ant.cpp  ant.hpp  building.cpp  building.hpp  entity_actions.cpp  entity_actions.hpp  entity_data.cpp  entity_data.hpp  entity_manager.cpp  entity_manager.hpp  inventory.cpp  inventory.hpp  map.cpp  map.hpp  map_builder.cpp  map_builder.hpp  map_entity.cpp  map_entity.hpp  map_manager.cpp  map_manager.hpp  map_reader.hpp  map_section_data.cpp  map_section_data.hpp  map_window.cpp  map_window.hpp  rect.cpp  rect.hpp  scents.cpp  scents.hpp
src/core/hardware/: ant_interactor.hpp  brain.cpp  brain.hpp  command_compilers.cpp  command_compilers.hpp  command_config.cpp  command_config.hpp  command_parsers.cpp  command_parsers.hpp  compile_args.hpp  compiler.cpp  compiler.hpp  controller.cpp  controller.hpp  hardware_manager.cpp  hardware_manager.hpp  label_map.cpp  label_map.hpp  machine_code.cpp  machine_code.hpp  op_def.cpp  op_def.hpp  operations.cpp  operations.hpp  parse_args.hpp  parser.cpp  parser.hpp  program_executor.cpp  program_executor.hpp  software_manager.cpp  software_manager.hpp  token_parser.cpp  token_parser.hpp
src/core/map/: builder.cpp  builder.hpp  manager.cpp  manager.hpp  map.cpp  map.hpp  section_data.cpp  section_data.hpp  window.cpp  window.hpp  world.cpp  world.hpp
src/core/ui/: buttonController.cpp  buttonController.hpp  colors.hpp  debug_graphics.hpp  debug_graphics_include.hpp  event_system.cpp  event_system.hpp  layoutbox.cpp  layoutbox.hpp  render.cpp  render.hpp  replay.cpp  replay.hpp  serializer_handler.cpp  serializer_handler.hpp  sidebar_menu.cpp  sidebar_menu.hpp  subscriber.hpp  text_editor.cpp  text_editor.hpp  text_editor_handler.cpp  text_editor_handler.hpp  ui_handlers.cpp  ui_handlers.hpp
src/core/utils/: algorithm.cpp  algorithm.hpp  math.cpp  math.hpp  serializer.cpp  serializer.hpp  status.cpp  status.hpp  string.cpp  string.hpp  thread_pool.cpp  thread_pool.hpp  types.hpp
src/proto/: CMakeLists.txt  engine.proto  entity.proto  hardware.proto  map.proto  replay.proto  ui.proto  utils.proto
src/py_wrapper/: CMakeLists.txt  main.py  py_wrapper.cpp
src/py_wrapper/stubs/: ant_core.pyi
tests/: CMakeLists.txt  test_e2e.cpp
tests/core/app_unit_test/: CMakeLists.txt
tests/core/entity_unit_test/: CMakeLists.txt
tests/core/hardware_unit_test/: CMakeLists.txt  assembly_program_builder.hpp  test_program_executor.cpp
tests/core/hardware_unit_test/brain/: CMakeLists.txt
tests/core/hardware_unit_test/command_config/: test_command_config.cpp
tests/core/hardware_unit_test/compiler/: CMakeLists.txt  test_compiler.cpp
tests/core/hardware_unit_test/hardware_manager/: test_hardware_manager.cpp
tests/core/hardware_unit_test/machine_code/: CMakeLists.txt
tests/core/hardware_unit_test/parser/: CMakeLists.txt  test_parser.cpp
tests/core/hardware_unit_test/program_executor/: assembly_program_builder.hpp
tests/core/hardware_unit_test/software_manager/: CMakeLists.txt
tests/core/hardware_unit_test/token_parser/: CMakeLists.txt  test_token_parser.cpp
tests/core/map_unit_test/: CMakeLists.txt  test_map.cpp
tests/core/ui_unit_test/: CMakeLists.txt  test_ui.cpp
tests/core/utils_unit_test/: test_utils.cpp
tests/e2e_tests/: CMakeLists.txt  action_e2e_tests.cpp  e2e_helpers.cpp  e2e_helpers.hpp  keyboard_e2e_tests.cpp  replay_e2e_tests.cpp  save_restore_e2e_tests.cpp  sidebar_e2e_tests.cpp  test_e2e.cpp  test_renderer.hpp
tests/proto_unit_test/: CMakeLists.txt  test_proto.cpp
tests/unit_tests/core_unit_test/app_unit_test/: CMakeLists.txt  save_restore_seeds.h  test_app.cpp  test_clock_speed.cpp
tests/unit_tests/core_unit_test/entity_unit_test/: test_entity.cpp
tests/unit_tests/core_unit_test/hardware_unit_test/: CMakeLists.txt
tests/unit_tests/core_unit_test/hardware_unit_test/brain/: test_brain.cpp
tests/unit_tests/core_unit_test/hardware_unit_test/command_config/: CMakeLists.txt
tests/unit_tests/core_unit_test/hardware_unit_test/hardware_manager/: CMakeLists.txt  test_hardware_manager.cpp
tests/unit_tests/core_unit_test/hardware_unit_test/label_map/: CMakeLists.txt  test_label_map.cpp
tests/unit_tests/core_unit_test/hardware_unit_test/machine_code/: test_machine_code.cpp
tests/unit_tests/core_unit_test/hardware_unit_test/op_def/: CMakeLists.txt  test_op_def.cpp
tests/unit_tests/core_unit_test/hardware_unit_test/parser/: CMakeLists.txt  test_parser.cpp  test_parser_edge_cases.cpp
tests/unit_tests/core_unit_test/hardware_unit_test/program_executor/: CMakeLists.txt  test_program_executor.cpp
tests/unit_tests/core_unit_test/hardware_unit_test/software_manager/: test_software_manager.cpp
tests/unit_tests/core_unit_test/hardware_unit_test/token_parser/: CMakeLists.txt  test_token_parser_edge_cases.cpp
tests/unit_tests/core_unit_test/map_unit_test/: CMakeLists.txt  test_map.cpp  test_map_edge_cases.cpp
tests/unit_tests/core_unit_test/ui_unit_test/: CMakeLists.txt  test_keyboard.cpp  test_sidebar_menu.cpp  test_ui.cpp
tests/unit_tests/core_unit_test/utils_unit_test/: CMakeLists.txt  test_utils.cpp
tests/unit_tests/proto_unit_test/: test_proto.cpp
tests/unit_tests/py_wrapper_unit_test/: CMakeLists.txt  test_py_wrapper.cpp
(+60 files in other folders)
